# books

./: Dockerfile  Makefile  docker-compose.yml  init_db.py  main.py  pyproject.toml
app/: base.py  config.py  constants.py  exceptions.py  models.py  schemas.py  types.py  views.py
db/: main.py  models.py
web/: main.py  pyproject.toml
web/app/: base.py  config.py  constants.py  exceptions.py  schemas.py  types.py  views.py
